# smart-city-inspection

./: .env  .gitignore  .odp-workspace  07-frame_source+美化测试.py  README.md  check_test.py  test_config.py  test_d4.py  test_d4_report.py  test_dior_model.py  test_dior_simple.py  test_video_infer.py
apps/desktop/: ODPlatform.spec  README.md  pyproject.toml
apps/desktop/src/odp_desktop/: main.py  window.py
apps/desktop/src/odp_desktop/pages/: __init__.py  infer_page.py  split_page.py  train_page.py
apps/platform/: README.md  pyproject.toml
apps/platform/configs/datasets/: dior.yaml  plantdoc.yaml  rsod.yaml  toy_voc.yaml
apps/platform/configs/runtime/: infer.yaml  train.yaml  train.yaml.bak.20260611_145800  train.yaml.bak.20260613_182858
apps/platform/configs/runtimes/: infer.yaml  train.yaml  val.yaml
apps/platform/src/odp_platform/: __init__.py  _version.py
apps/platform/src/odp_platform/cli/: infer.py  infer_model.py  reset_project.py  train_model.py  transform_data.py  validate_data.py
apps/platform/src/odp_platform/common/: config_log.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  performance_utils.py  result.py  string_utils.py  system_utils.py
apps/platform/src/odp_platform/data_pipeline/: __init__.py  orchestrator.py  registry.py  service.py
apps/platform/src/odp_platform/data_pipeline/core/: __init__.py  coco.py  pascal_voc.py  yolo.py
apps/platform/src/odp_platform/data_pipeline/split/: __init__.py  manifest.py  materializer.py  splitter.py  strategy_registry.py  yaml_writer.py
apps/platform/src/odp_platform/data_validation/: __init__.py  models.py  registry.py  render.py  report.py  reporter.py  runner.py  service.py  snapshot.py
apps/platform/src/odp_platform/data_validation/checks/: annotation_coverage.py  bbox_within_image.py  box_geometry.py  class_balance.py  class_presence.py  duplicate_annotations.py  image_integrity.py  label_format.py  orphan_labels.py  pair_existence.py  placeholder.py  split_presence.py  split_uniqueness.py  stem_collision.py  yaml_schema.py
apps/platform/src/odp_platform/frame_source/: __init__.py  camera.py  factory.py  image.py  video.py
apps/platform/src/odp_platform/inference/: __init__.py  overlay.py  pipeline.py  pipeline_config.py  service.py
apps/platform/src/odp_platform/runtime_config/: __init__.py  base.py  generator.py  infer.py  loaders.py  merger.py  train.py  val.py
apps/platform/src/odp_platform/training/: __init__.py  archive.py  result.py  service.py
apps/platform/src/odp_platform/visualization/: __init__.py  visualizer.py
apps/platform/tests/: conftest.py
apps/platform/tests/unit/: test_manifest.py  test_pascal_voc.py  test_registry.py
scripts/: git_upload.ps1  init_project.py  (+3 more)
(+20 files in other folders)
