# apps/platform/pyproject.toml

# ODPlatform - platform 端配置


# 必须项告诉pip 用什么工具来构建这个端
[build-system]
requires = ["hatchling >= 1.20.0"]
build-backend = "hatchling.build"

# 需要记录项目的源信息
[project]
name = 'odp-platform'
dynamic = ['version']
description = "ODPlatform - 目标检测开发平台核心引擎"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Azurekite"}
]
keywords = ["object-detection", 'yolo', 'deep-learning']

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 运行时的依赖
dependencies = [
    "colorlog>=6.10.1",
    "psutil>=7.2.2",
]

# 可选的依赖租
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]


# 命令行入口(关键)
# =============================================================================
# Entry-point Scripts (PEP 621 标准字段, 与 backend 无关)
# =============================================================================
[project.scripts]
odp-init = "odp_platform.cli.init_project:initialize_project"
odp-reset = "odp_platform.cli.reset_project:main"
odp-transform = "odp_platform.cli.transform_data:main"
odp-validate = "odp_platform.cli.validate_data:main"
odp-gen-config = "odp_platform.runtime_config.generator:main"
odp-train = "odp_platform.cli.train_model:main"
odp-infer = "odp_platform.cli.infer_model:main"

# =============================================================================
# Hatchling 配置 (告诉它两件事: 包源码在哪、版本号从哪读)
# =============================================================================

# 告诉 hatchling 包源码在 src/odp_platform/
# (相当于 setuptools 那一整套 package-dir + packages.find 的简化版)
[tool.hatch.build.targets.wheel]
packages = ["src/odp_platform"]

# 动态版本号: 从 src/odp_platform/_version.py 的 __version__ 读
# (回顾: 这个文件是 Stage 3.3 创建的)
[tool.hatch.version]
path = "src/odp_platform/_version.py"






